--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="A stupid game about columns">
 		<meta name="keywords" content="Bad Boxart, game, jam, game jam, Game Jolt, GameJolt">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="theme-color" content="#ffffff">
+		<meta name="theme-color" content="#D26484">
 		<title>Columns</title>
 	</head>
 	<body>
