--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ b.style.overflow="hidden";b.style.margin=0;(onresize=function(){c.width=innerWid
 animate=function a(f){f(),requestAnimationFrame(function(){a(f)})}
 for(p=Object.getOwnPropertyNames(Math),i=0;k=p[i];i++){self[k]=Math[k]}TAU=PI*2}()</script>
 		<script src="lib/coffee-script.js"></script>
+		<script src="lib/howler.min.js"></script>
 		<script src="game.coffee" type="text/coffeescript"></script>
 	</body>
 </html>
