--- a/index.html
+++ b/index.html
@@ -15,6 +15,101 @@ canvas=c;ctx=c.getContext("2d")
 b.style.overflow="hidden";b.style.margin=0;(onresize=function(){c.width=innerWidth,c.height=innerHeight})()
 animate=function a(f){f(),requestAnimationFrame(function(){a(f)})}
 for(p=Object.getOwnPropertyNames(Math),i=0;k=p[i];i++){self[k]=Math[k]}TAU=PI*2}()</script>
+		<script src="lib/dialog-polyfill.js"></script>
+		<link rel="stylesheet" type="text/css" href="lib/dialog-polyfill.css" />
+		<div id="controls">
+			<!-- <button id="open-restart-dialogue">Restart</button>
+			<button id="toggle-mute" class="mute">Mute</button>
+			<button id="fullscreen">Fullscreen</button> -->
+			<button id="open-restart-dialogue"></button><button id="toggle-mute" class="mute"></button><button id="fullscreen"></button>
+		</div>
+		<style>
+			body {
+				font-family: sans-serif;
+			}
+			#controls {
+				position: absolute;
+				top: 0;
+				font-size: 1.8em;
+			}
+			#controls button {
+				border: 0;
+				/*width: 16px;
+				height: 16px;*/
+				/*color: transparent;*/
+				margin: 5px;
+				padding: 5px;
+				opacity: 0.7;
+				background-color: transparent;
+				/*background-size: contain;*/
+				background-size: 2em;
+				background-position: center;
+				background-repeat: no-repeat;
+				
+				width: 4em;
+				height: 4em;
+			}
+			#controls button:hover {
+				background-color: rgba(0, 0, 0, 0.2);
+			}
+			#controls button:focus,
+			#controls button:active {
+				background-color: rgba(55, 126, 244, 0.6);
+			}
+			#open-restart-dialogue {
+				background-image: url("icons/restart.svg");
+			}
+			#fullscreen {
+				background-image: url("icons/fullscreen.svg");
+			}
+			.mute {
+				background-image: url("icons/mute.svg");
+			}
+			.unmute {
+				background-image: url("icons/unmute.svg");
+			}
+			:fullscreen #fullscreen {
+				display: none;
+			}
+			:-ms-fullscreen #fullscreen {
+				display: none;
+			}
+			:-moz-full-screen #fullscreen {
+				display: none;
+			}
+			:-webkit-full-screen #fullscreen {
+				display: none;
+			}
+			dialog {
+				background-color: #2D2D2D;
+				color: white;
+				border: 0;
+				padding: 10px 20px;
+			}
+			dialog p {
+				margin: 10px 0;
+			}
+			button {
+				background-color: #555;
+				color: white;
+				border: 0;
+				padding: 5px 10px;
+				margin: 10px 0;
+			}
+			button:hover {
+				background-color: #666;
+			}
+			button:focus,
+			button:active {
+				background-color: #377EF4;
+			}
+		</style>
+		<dialog id="restart-dialogue">
+			<p>Restart the game?</p>
+			<p>Maybe get some better columns?</p>
+			<button id="do-restart">Restart</button>
+			<button id="cancel-restart">Cancel</button>
+		</dialog>
 		<script src="lib/coffee-script.js"></script>
 		<script src="lib/howler.min.js"></script>
 		<script src="game.coffee" type="text/coffeescript"></script>
